[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast-memory-write-env"
version = "0.1.0"
description = "A production-shaped streaming memory-write environment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pinecone>=7,<8",
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: tests that require external services or credentials",
]
